Adding CV and Readme

--- a/_config.yml
+++ b/_config.yml
@@ -20,3 +20,6 @@ instagram_username: ericealbright
 
 # Build settings
 markdown: kramdown
+
+# Exclude
+exclude: ['README.md', 'Gemfile.lock', 'Gemfile']
