--- a/_config.yml
+++ b/_config.yml
@@ -8,12 +8,12 @@
 # Site settings
 title: eric e albright
 email:
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+description:
+copyright: "&copy; 2016 eric e albright"
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "http://ericealbright.github.io" # the base hostname & protocol for your site
+
+# External Usernames
 twitter_username:   ericealbright
 github_username:    ericealbright
 instagram_username: ericealbright
@@ -22,4 +22,4 @@ instagram_username: ericealbright
 markdown: kramdown
 
 # Exclude
-exclude: ['README.md', 'Gemfile.lock', 'Gemfile']
+exclude: ['README.md', 'Gemfile.lock', 'Gemfile', '_ignore']
